# lsfg-vk-dualgpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_report.md  feature_request.md  issue_report.md
.github/workflows/: build.yml  flatpak.yml  flatpak_ci.yml  package.yml  package_ci.yml
docs/: Building-From-Source.md  Configuration.md  Flatpak-Guide.md  Journey.md  Troubleshooting.md
flatpak/: gay.pancake.lsfg-vk-ui.metainfo.xml  gay.pancake.lsfg-vk-ui.yml  org.freedesktop.Platform.VulkanLayer.lsfgvk_25.08.yml
framegen/: CMakeLists.txt
framegen/include/core/: device.hpp
framegen/public/: lsfg_3_1.hpp  lsfg_3_1p.hpp
framegen/src/core/: device.cpp
framegen/v3.1_src/: lsfg.cpp
framegen/v3.1_src/shaders/: delta.cpp
framegen/v3.1p_include/v3_1p/shaders/: delta.hpp
framegen/v3.1p_src/: context.cpp  lsfg.cpp
framegen/v3.1p_src/shaders/: delta.cpp
include/config/: config.hpp  default_conf.hpp
lsfg-vk-backend/: CMakeLists.txt
lsfg-vk-backend/include/lsfg-vk-backend/: lsfgvk.hpp
lsfg-vk-backend/src/: lsfgvk.cpp
lsfg-vk-backend/src/extraction/: dll_reader.cpp  dll_reader.hpp  shader_registry.cpp  shader_registry.hpp
lsfg-vk-backend/src/helpers/: limits.cpp  limits.hpp  managed_shader.cpp  managed_shader.hpp  utils.cpp  utils.hpp
lsfg-vk-backend/src/shaderchains/: alpha0.cpp  alpha0.hpp  alpha1.cpp  alpha1.hpp  beta0.cpp  beta0.hpp  beta1.cpp  beta1.hpp  delta0.cpp  delta0.hpp  delta1.cpp  delta1.hpp  gamma0.cpp  gamma0.hpp  gamma1.cpp  gamma1.hpp  generate.cpp  generate.hpp  mipmaps.cpp  mipmaps.hpp
lsfg-vk-cli/src/: main.cpp
lsfg-vk-cli/src/tools/: benchmark.cpp  benchmark.hpp  debug.cpp  debug.hpp  validate.cpp  validate.hpp
lsfg-vk-common/: CMakeLists.txt
lsfg-vk-common/include/lsfg-vk-common/configuration/: config.hpp  detection.hpp
lsfg-vk-common/include/lsfg-vk-common/helpers/: errors.hpp  paths.hpp  pointers.hpp
lsfg-vk-common/include/lsfg-vk-common/vulkan/: buffer.hpp  command_buffer.hpp  descriptor_pool.hpp  descriptor_set.hpp  drm_syncobj.hpp  fence.hpp  image.hpp  semaphore.hpp  shader.hpp  timeline_semaphore.hpp  vulkan.hpp
lsfg-vk-common/src/configuration/: config.cpp  detection.cpp
lsfg-vk-common/src/helpers/: errors.cpp  paths.cpp
lsfg-vk-common/src/vulkan/: buffer.cpp  command_buffer.cpp  descriptor_pool.cpp  descriptor_set.cpp  drm_syncobj.cpp  fence.cpp  image.cpp  sampler.cpp  semaphore.cpp  shader.cpp  timeline_semaphore.cpp  vulkan.cpp
lsfg-vk-debug/: layer_json.json
lsfg-vk-debug/src/: debug.cpp
lsfg-vk-layer/: .clang-tidy  CMakeLists.txt  VkLayer_LS_frame_generation.json
lsfg-vk-layer/src/: entrypoint.cpp  instance.cpp  instance.hpp  layer.cpp  layer.hpp  swapchain.cpp  swapchain.hpp
lsfg-vk-layer/src/configuration/: config.cpp  config.hpp  detection.cpp
lsfg-vk-layer/src/context/: instance.cpp  instance.hpp  swapchain.cpp  swapchain.hpp
lsfg-vk-ui/: CMakeLists.txt
lsfg-vk-ui/rsc/: UI.qml
lsfg-vk-ui/rsc/panes/: ProfileList.qml
lsfg-vk-ui/rsc/widgets/: FileEdit.qml  FlowSlider.qml
lsfg-vk-ui/src/: backend.cpp  backend.hpp  main.cpp  utils.cpp  utils.hpp
package/: package.sh  rpm.spec
scripts/flatpak/: org.freedesktop.Platform.VulkanLayer.lsfgvk_23.08.yml  org.freedesktop.Platform.VulkanLayer.lsfgvk_24.08.yml
scripts/package/: alpm.PKGINFO  dpkg.control  package.sh  rpm.spec
src/: context.cpp  main.cpp
src/config/: config.cpp
src/extract/: trans.cpp
src/utils/: benchmark.cpp
test/: CMakeLists.txt
ui/: Cargo.toml  appimage.sh  build.rs
ui/resources/: com.cali666.lsfg-vk-ui.desktop  ui.ui
ui/rsc/: gay.pancake.lsfg-vk-ui.desktop  lsfg-vk.xml  resources.gresource.xml  window.ui
ui/rsc/entry/: entry.ui
ui/rsc/pane/: main.ui
ui/rsc/popup/: process.ui  process_entry.ui
ui/rsc/pref/: dropdown.ui  entry.ui  number.ui  slider.ui  switch.ui
ui/src/: app_state.rs  config.rs  main.rs  settings_window.rs  ui.rs  utils.rs  wrapper.rs
ui/src/config/: structs.rs
ui/src/ui/: entry_handler.rs  main_handler.rs  sidebar_handler.rs
ui/src/wrapper/: popup.rs
ui/src/wrapper/entry/: entry.rs
ui/src/wrapper/pane/: main.rs
ui/src/wrapper/popup/: process.rs  process_entry.rs
ui/src/wrapper/pref/: dropdown.rs  entry.rs  number.rs  slider.rs  switch.rs
