[package]
name = "lsfg-vk-ui"
version = "0.1.3"
edition = "2021"
authors = ["Cali666"]
description = "Lossless Scaling Frame Generation Configuration Tool"

[dependencies]
libadwaita = "0.5"
gtk = { version = "0.7", package = "gtk4" }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
