[package]
name = "ui"
version = "0.0.1"
edition = "2024"

[dependencies]
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_10"] }
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
anyhow = "1.0"
procfs = "0.17.0"
proc-maps = "0.4.0"

[build-dependencies]
glib-build-tools = "0.21.0"
